[package]
name = "audion"
version = "0.2.1"
edition = "2021"
authors = ["Fabian Affolter <fabian.affolter@audius.de>"]
description = "Ping the host continuously and write results to a file"
license = "MIT"
homepage = "https://github.com/audius/audion"
repository = "https://github.com/audius/audion"

[dependencies]
chrono = "0.4.42"
surge-ping = "0.8.4"
tokio = { version = "1", features = ["full"] }
seahorse = "2.2.0"
